# Non-deterministic-finite-automata

./: Automata.cpp  Automata.h  CMakeLists.txt  Command.h  MyQueue.h  MySet.hpp  MyString.cpp  MyString.h  MyVector.hpp  README.md  State.cpp  State.h  String.cpp  String.h  Transition.hpp  main.cpp
Commands/: BuildAutomata.h  BuildUnion.cpp  BuildUnion.h  BuildaAutomata.cpp  Command.h  CommandFactory.cpp  CommandFactory.h  ComplementBuild.cpp  ComplementBuild.h  ConcatAutomats.cpp  ConcatAutomats.h  DifferenceBuild.cpp  DifferenceBuild.h  InteresctionBuild.cpp  InteresctionBuild.h  KleeneStarAutomat.cpp  KleeneStarAutomat.h  LoadFromFile.cpp  LoadFromFile.h
NDFA/: Automata.cpp  Automata.h  State.cpp  State.h  Transition.hpp
data structures/: MyQueue.hpp  MyVector.hpp  String.cpp  String.h
